Add a reuseaddr option for network gensios
It turns out the UDP issue was not a bug in Linux, but the fact that
SO_REUSEADDR was set on the UDP sockets and occasionally the two parts
of the test would choose the same socket port.

So add a "reuseaddr" parameter for network gensios, default TCP and
SCTP to be true, and default UDP to be false.

This required adding a class default for UDP at init time, that then
needed to be freed when cleaning out memory.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -311,6 +311,10 @@ In addition to readbuf, the tcp gensio takes the following options:
 .B laddr=<addr>
 An address specification to bind to on the local socket to set the
 local address.
+.TP
+.B reuseaddr[=true|false]
+Set SO_REUSEADDR on the socket, good for accepting gensios only.
+Defaults to true.
 .SS Remote Address String
 The remote address will be in the format "[ipv4|ipv6],<addr>,<port>" where the
 address is in numeric format, IPv4, or IPv6.
@@ -371,6 +375,10 @@ Add an address to receive multicast packets on.  There is no port
 number, this is just addresses.  You can specify multiple addresses in
 a single multicast option and/or the multicast option can be used
 multiple times to add multiple multicast addresses.
+.TP
+.B reuseaddr[=true|false]
+Set SO_REUSEADDR on the socket, good for connecting and accepting
+gensios.  Defaults to false.
 .SS "Remote Address String"
 The remote address will be in the format "[ipv4|ipv6],<addr>,<port>" where the
 address is in numeric format, IPv4, or IPv6.
@@ -438,6 +446,10 @@ for read and write in the format "stream=<n>".
 .B laddr=<addr>
 An address specification to bind to on the local socket to set the
 local address.
+.TP
+.B reuseaddr[=true|false]
+Set SO_REUSEADDR on the socket, good for accepting gensios only.
+Defaults to true.
 
 Port 0 is supported just like TCP for accepters, see Dynamic Ports in
 the TCP section above for details.
