man: Fix some typos
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -1151,8 +1151,8 @@ have a CRC16 on the end of them.
 This is primarily for use on serial ports and other streams that can
 munge up the data.  Use the mux gensio for TCP and such.
 
-THe default buffer size is 128 bytes, which is ok for a reasonable
-fast serial prot interface.
+THe default buffer size is 128 bytes, which is ok for a reasonably
+fast serial port interface.
 .SS Options
 In addition to readbuf, the msgdelim gensio takes the following options:
 .TP
