--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -62,6 +62,10 @@ Disable SCTP support.
 .I \-\-notcp
 Disable TCP support
 .TP
+.I \-\-other_acc <accepter>
+Enable the given accepter to receive connections for gtlsshd.  This
+does not disable TCP or SCTP.
+.TP
 .I \-P|\-\-pidfile file
 Create a standard pidfile using the given filename.
 .TP
