man: Fix a typo
Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/str_to_gensio.3
+++ b/man/str_to_gensio.3
@@ -44,7 +44,7 @@ to open just this gensio.  This can only be used to allocate filter
 gensios.
 
 .B gensio_acc_str_to_gensio
-allocates a gensio based upon the given accepter.  The avaiability and
+allocates a gensio based upon the given accepter.  The availability and
 use of this varies from gensio to gensio, but it can be used on UDP to
 create a gensio that uses the UDP ports that the accepter owns.
 This will come from the first address/port that the accepter is on
