tools:gtlsshd: Cause stderr output on debug, not oneshot
Sending output to stderr is a debug function; oneshot may be used for
other purposes.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -77,6 +77,7 @@ Do IPv4 only.
 Do IPv6 only.
 .I \-d|\-\-debug
 Generate debugging output.  Specifying more than once increases the output.
+This also causes syslog output to go to standard error.
 .TP
 .I \-h|\-\-help
 Help output
