pty: Add an option to set termios to raw on master side
With tests, the timing of setting up the pty and the other end opening
is a bit difficult to predict.  So just allow the pty to be started in
raw mode to avoid issues with thing like ECHO being set because the
client hasn't configured the termios yet.

Signed-off-by: Corey Minyard <cminyard@mvista.com>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -1142,6 +1142,11 @@ exists.
 if link is specified, if a file already exists where the symbolic link
 is, replace it.  Be careful, it deletes whatever is there
 indiscriminately.
+.TP
+.B raw[=true|false]
+causes the pty to be set in raw mode at startup.  This is mostly for
+testing, to avoid writing data to the pty before the other end has set
+it up, but it might be useful in some situations.
 .SS "Remote Address String"
 The remote address string the program and arguments run on the pty.
 The argiuments will be a set of quoted strings with a space between each
